show more things from the event log
including parsing some RTCP message using some old code from
the venerable rtc-shark ported from ES5

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         -->
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://cdn.rawgit.com/dcodeIO/protobuf.js/6.11.3/dist/protobuf.min.js"></script>
+        <script src="rtcp.js"></script>
         <script src="pcap.js"></script>
     </head>
     <body>
         <form><input type="file" onchange="doImport(event)"></form>
         <span id="download"></span>
         <div id="graph"></div>
+        <input type="checkbox" id="toggle" disabled><label>Toggle all data series</label>
     </body>
     <script>
 let file;
@@ -29,7 +31,7 @@ function doImport(evt) {
     reader.onload = ((file) => {
         // WebRTC-internals follows a certain format when creating the log file.
         // Try to interpret it as the timestamp of the capture, other
-        let absolabsoluteStartTimeUsuteStartUs = 0;
+        let absoluteStartTimeUs = 0;
         const dateMatch = file.name.match(/.*_(\d\d\d\d)(\d\d)(\d\d)_(\d\d)(\d\d)_(\d+)_.*.log/);
         if (dateMatch) {
             absoluteStartTimeUs = new Date(dateMatch[1], dateMatch[2], dateMatch[3], dateMatch[4], dateMatch[5], dateMatch[6]).getTime() * 1000;
@@ -58,9 +60,20 @@ const bweProbeClusters = [];
 const bweProbeResults = [];
 const lossBasedUpdates = [];
 const delayBasedUpdates = [];
+const pictureLossIndications = {
+    inbound: [],
+    outbound: [],
+};
+const rembValues = {
+    inbound: [],
+    outbound: [],
+};
+const pictureLossIndicationsInbound = [];
+const rtcpReceiverReport = {};
 const pcap = new PCAPWriter();
 const perSsrcByteCount = {};
 const bitrateSeries = {};
+
 function decode(event, startTimeUs, absoluteStartTimeUs) {
     const relativeTimeMs = (event.timestampUs - startTimeUs) / 1000;
     const absoluteTimeMs = absoluteStartTimeUs / 1000 + relativeTimeMs;
@@ -72,6 +85,8 @@ function decode(event, startTimeUs, absoluteStartTimeUs) {
             if (!perSsrcByteCount[ssrc]) {
                 perSsrcByteCount[ssrc] = [0, relativeTimeMs];
                 bitrateSeries[ssrc] = [[absoluteTimeMs, 0]];
+                bitrateSeries[ssrc].incoming = event.rtpPacket.incoming;
+                // TODO: extract payload type to infer media type.
             }
             perSsrcByteCount[ssrc][0] += event.rtpPacket.packetLength - event.rtpPacket.header.byteLength;
             if (relativeTimeMs - perSsrcByteCount[ssrc][1] > 1000) {
@@ -81,6 +96,57 @@ function decode(event, startTimeUs, absoluteStartTimeUs) {
             break;
         case 4: //'RTCP_EVENT':
             pcap.write(event.rtcpPacket.packetData, event.rtcpPacket.incoming, event.rtcpPacket.packetData.byteLength, absoluteStartTimeUs + event.timestampUs - startTimeUs);
+            RTCP.forEach(event.rtcpPacket.packetData,
+                {payloadType: RTCP.PT_PFB, feedbackMessageType: RTCP.FMT_PLI, filter: (decoded) => {
+                    pictureLossIndications[event.rtcpPacket.incoming ? 'inbound' : 'outbound'].push({
+                        x: absoluteTimeMs,
+                        y: event.rtcpPacket.incoming ? 1 : 0, // TODO: maybe use one y value per ssrc?
+                        name: 'ssrc=' + decoded.synchronizationSource,
+                    });
+                }},
+                {payloadType: RTCP.PT_PSFB, feedbackMessageType: RTCP.FMT_ALFB, filter: (decoded, packet, offset, length) => {
+                    // https://datatracker.ietf.org/doc/html/draft-alvestrand-rmcat-remb-03#section-2
+                    const view = new DataView(packet.buffer, packet.byteOffset + offset, length);
+                    if (view.getUint32(12) != 0x52454d42) {
+                        // REMB literal.
+                        return;
+                    }
+                    const exponent = view.getUint8(17) >> 2;
+                    const mantissa = view.getUint32(16) & 0x0003ffff;
+                    const remb = mantissa * Math.pow(2, exponent);
+                    rembValues[event.rtcpPacket.incoming ? 'inbound' : 'outbound'].push({
+                        x: absoluteTimeMs,
+                        y: remb,
+                        name: 'ssrc=' + decoded.synchronizationSource,
+                    });
+                }},
+                {payloadType: RTCP.PT_RR, filter: (decoded, packet, offset, length) => {
+                    const view = new DataView(packet.buffer, packet.byteOffset + offset, length)
+                    const reports = [];
+
+                    offset = 8;
+                    while (offset + 24 <= view.byteLength) {
+                        reports.push({
+                            synchronizationSource: view.getUint32(offset),
+                            fractionLost: view.getUint8(offset + 4) / 256.0,
+                        });
+                        offset += 24;
+                    }
+                    if (decoded.reportCounter === reports.length) {
+                        reports.forEach(report => {
+                            if (!rtcpReceiverReport[report.synchronizationSource]) {
+                                rtcpReceiverReport[report.synchronizationSource] = [];
+                                // TODO: include direction?
+                            }
+                            rtcpReceiverReport[report.synchronizationSource].push({
+                                x: absoluteTimeMs, // TODO: actually the time from the RR?
+                                y: report.fractionLost,
+                                name: 'ssrc=' + report.synchronizationSource,
+                            })
+                        });
+                    }
+                }},
+            );
             break;
         case 5: // audio playout event, ignore
             break;
@@ -114,9 +180,7 @@ function decode(event, startTimeUs, absoluteStartTimeUs) {
 
 function plot() {
     const graph = new Highcharts.Chart({
-        title: {
-            text: 'BWE probe results'
-        },
+        title: false,
         xAxis: {
             type: 'datetime',
         },
@@ -147,21 +211,60 @@ function plot() {
                 data: bweProbeResults,
             },
             {
-                name: "Loss based updates",
+                name: 'Loss based updates',
                 data: lossBasedUpdates,
+                step: 'left',
+                dashStyle: 'Dash',
             },
             {
-                name: "Delay based updates",
+                name: 'Delay based updates',
                 data: delayBasedUpdates,
-            }
+                step: 'left',
+                dashStyle: 'Dash',
+            },
+            {
+                name: 'Inbound REMB',
+                type: 'scatter',
+                data: rembValues['inbound'],
+            },
+            {
+                name: 'Outbound REMB',
+                type: 'scatter',
+                data: rembValues['outbound'],
+            },
+            {
+                name: 'Inbound RTCP PLI (picture loss indication)',
+                type: 'scatter',
+                data: pictureLossIndications['inbound'],
+            },
+            {
+                name: 'Outbound RTCP PLI (picture loss indication)',
+                type: 'scatter',
+                data: pictureLossIndications['outbound'],
+            },
         ],
     });
     Object.keys(bitrateSeries).forEach(ssrc => {
         graph.addSeries({
-            name: 'average bitrate ssrc=0x' + ssrc.toString(16),
+            name: 'average bitrate ssrc=' + ssrc + ' ' + (bitrateSeries[ssrc].incoming ? 'inbound' : 'outbound'),
             data: bitrateSeries[ssrc],
         });
     });
+    Object.keys(rtcpReceiverReport).forEach(ssrc => {
+        graph.addSeries({
+            name: 'RTCP RR loss percentage ssrc=' + ssrc,
+            data: rtcpReceiverReport[ssrc],
+        });
+    });
+    const toggle = document.getElementById('toggle');
+    toggle.onchange = () => {
+        graph.series.forEach(series => {
+            series.setVisible(!toggle.checked, false);
+        });
+        graph.redraw();
+    };
+    toggle.disabled = false;
+    window.graph = graph;
 }
 function savePCAP() {
     const blob = pcap.save();
