add bitstream reader and delta decoder for new format
based on
https://source.chromium.org/chromium/chromium/src/+/refs/heads/main:third_party/webrtc/logging/rtc_event_log/encoder/delta_encoding.cc

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="rtp.js"></script>
         <script src="rtcp.js"></script>
         <script src="pcap.js"></script>
+        <script src="bitstream.js"></script>
     </head>
     <body>
         <form>
